harness/test/errors/092_target_not_found.eu
# Error: target not found — asking for a target that does not exist
foo: 42
bar: 99
